the methods are working fine